Change absolute url to relative url #74

--- a/src/ViveCortelazor/Resources/Views/Home/History.en.resx
+++ b/src/ViveCortelazor/Resources/Views/Home/History.en.resx
@@ -129,17 +129,17 @@
 
 ![Cortelazor la Real](/images/history-cortelazor.jpg)
 
-[**Cortelazor la Real**](https://www.vivecortelazor.es/es) is a picturesque municipality in the province of Huelva, nestled in the Sierra de Aracena and Picos de Aroche Natural Park. Its history dates back to prehistoric times, with evidence of human occupation since the Bronze Age. Over the centuries, various civilizations have left their mark on this beautiful corner of the Sierra de Huelva.
+[**Cortelazor la Real**](/en) is a picturesque municipality in the province of Huelva, nestled in the Sierra de Aracena and Picos de Aroche Natural Park. Its history dates back to prehistoric times, with evidence of human occupation since the Bronze Age. Over the centuries, various civilizations have left their mark on this beautiful corner of the Sierra de Huelva.
 
 ### Origins and Etymology
 
 The earliest archaeological remains in the area date back to the 2nd millennium BC, with findings in places such as the Sierra del Cuchillar and the Cañada de los Domínguez. During the Roman era, a settlement was established near the present-day Sanctuary of Nuestra Señora de la Coronada, where coins from the Emperor Augustus and other relics have been found.
 
-The origin of the name [**Cortelazor**](https://www.vivecortelazor.es/es) is uncertain. Some historians suggest that it derives from the "Court of King Azor," an Arab leader from the time of the Taifa kingdoms, while other theories link it to falconry, an activity practiced in the area.
+The origin of the name [**Cortelazor**](/en) is uncertain. Some historians suggest that it derives from the "Court of King Azor," an Arab leader from the time of the Taifa kingdoms, while other theories link it to falconry, an activity practiced in the area.
 
 ### Incorporation into the Crown of Castile and Historical Evolution
 
-After the Christian conquest by Alfonso X the Wise, Cortelazor became part of the Crown of Castile, under the jurisdiction of Aracena. In 1631, Philip IV granted it the title of a town, allowing it administrative independence in exchange for a payment of 2,000 ducats.
+After the Christian conquest by Alfonso X the Wise, [**Cortelazor**](/en) became part of the Crown of Castile, under the jurisdiction of Aracena. In 1631, Philip IV granted it the title of a town, allowing it administrative independence in exchange for a payment of 2,000 ducats.
 
 The town faced ups and downs during the 17th century due to war conflicts and tax pressures. In 1713, the population had dwindled to 30 households, but by the late 18th century, it had reached 559 inhabitants, thanks to agriculture and livestock farming.
 
@@ -153,15 +153,15 @@ In recent decades, the economy has diversified with Iberian pig farming, constru
 
 ### Heritage and Culture
 
-[**Cortelazor la Real**](https://www.vivecortelazor.es/es) boasts valuable historical heritage, including the **Church of Nuestra Señora de los Remedios**, built in 1565 and expanded in the 18th century. Inside, "La Divina Pastora," an 18th-century painting attributed to Alonso Miguel de Tovar, is preserved.
+[**Cortelazor la Real**](/en) boasts valuable historical heritage, including the **Church of Nuestra Señora de los Remedios**, built in 1565 and expanded in the 18th century. Inside, "La Divina Pastora," an 18th-century painting attributed to Alonso Miguel de Tovar, is preserved.
 
 Another symbol of the town is its **centennial elm**, where town council meetings were once held. Additionally, the **Sanctuary of Nuestra Señora de la Coronada** is a place of great archaeological and devotional value.
 
 ### Cortelazor Today
 
-Today, [**Cortelazor la Real**](https://www.vivecortelazor.es/es) maintains its traditional essence and natural beauty, attracting visitors seeking tranquility and contact with nature. Its privileged location makes it an ideal destination for hiking and rural tourism. Its economy remains based on livestock farming and tourism, solidifying its status as a hidden treasure in the Sierra de Huelva.
+Today, [**Cortelazor la Real**](/en) maintains its traditional essence and natural beauty, attracting visitors seeking tranquility and contact with nature. Its privileged location makes it an ideal destination for hiking and rural tourism. Its economy remains based on livestock farming and tourism, solidifying its status as a hidden treasure in the Sierra de Huelva.
 
-With a fascinating historical legacy and an unparalleled environment, [**Cortelazor la Real**](https://www.vivecortelazor.es/es) continues to be an essential destination for those wishing to experience authentic life in the Sierra de Aracena.</value>
+With a fascinating historical legacy and an unparalleled environment, [**Cortelazor la Real**](/en) continues to be an essential destination for those wishing to experience authentic life in the Sierra de Aracena.</value>
   </data>
   <data name="Keywords" xml:space="preserve">
     <value>Cortelazor la Real, history of Cortelazor, Sierra de Aracena, heritage, traditions, culture, Huelva, Andalusian villages</value>
