--- a/src/ViveCortelazor/Resources/Views/Home/History.es.resx
+++ b/src/ViveCortelazor/Resources/Views/Home/History.es.resx
@@ -129,17 +129,17 @@
 
 ![Cortelazor la Real](/images/history-cortelazor.jpg)
 
-[**Cortelazor la Real**](https://www.vivecortelazor.es/es) es un pintoresco municipio de la provincia de Huelva, enclavado en el Parque Natural Sierra de Aracena y Picos de Aroche. Su historia se remonta a tiempos prehistóricos, con evidencias de ocupación humana desde la Edad del Bronce. A lo largo de los siglos, diversas civilizaciones han dejado su huella en este hermoso rincón de la Sierra de Huelva.
+[**Cortelazor la Real**](/es) es un pintoresco municipio de la provincia de Huelva, enclavado en el Parque Natural Sierra de Aracena y Picos de Aroche. Su historia se remonta a tiempos prehistóricos, con evidencias de ocupación humana desde la Edad del Bronce. A lo largo de los siglos, diversas civilizaciones han dejado su huella en este hermoso rincón de la Sierra de Huelva.
 
 ### Orígenes y etimología
 
 Los primeros restos arqueológicos en la zona datan del II milenio a.C., con hallazgos en lugares como la Sierra del Cuchillar y la Cañada de los Domínguez. Durante la época romana, se estableció un asentamiento cerca del actual Santuario de Nuestra Señora de la Coronada, donde se han encontrado monedas del emperador Augusto y otros vestigios.
 
-El origen del nombre de [**Cortelazor**](https://www.vivecortelazor.es/es) es incierto. Algunos historiadores sugieren que deriva de la "Corte del Rey Azor", un líder árabe de la época de los reinos de Taifas, mientras que otras teorías lo relacionan con la cetrería, actividad practicada en la zona.
+El origen del nombre de [**Cortelazor**](/es) es incierto. Algunos historiadores sugieren que deriva de la "Corte del Rey Azor", un líder árabe de la época de los reinos de Taifas, mientras que otras teorías lo relacionan con la cetrería, actividad practicada en la zona.
 
 ### Incorporación a la Corona de Castilla y evolución histórica
 
-Tras la conquista cristiana por Alfonso X el Sabio, Cortelazor pasó a formar parte de la Corona de Castilla, bajo la jurisdicción de Aracena. En 1631, Felipe IV le concedió el título de villa, permitiéndole su independencia administrativa a cambio del pago de 2.000 ducados.
+Tras la conquista cristiana por Alfonso X el Sabio, [**Cortelazor**](/es) pasó a formar parte de la Corona de Castilla, bajo la jurisdicción de Aracena. En 1631, Felipe IV le concedió el título de villa, permitiéndole su independencia administrativa a cambio del pago de 2.000 ducados.
 
 El pueblo sufrió altibajos durante el siglo XVII debido a conflictos bélicos y la presión fiscal. En 1713, la población se redujo a 30 vecinos, pero a finales del siglo XVIII alcanzó los 559 habitantes, gracias a la agricultura y la ganadería.
 
@@ -153,15 +153,15 @@ En las últimas décadas, la economía se ha diversificado con la ganadería del
 
 ### Patrimonio y cultura
 
-[**Cortelazor la Real**](https://www.vivecortelazor.es/es) cuenta con un valioso patrimonio histórico, entre el que destaca la **Iglesia de Nuestra Señora de los Remedios**, construida en 1565 y ampliada en el siglo XVIII. En su interior se conserva "La Divina Pastora", una obra pictórica del siglo XVIII atribuida a Alonso Miguel de Tovar.
+[**Cortelazor la Real**](/es) cuenta con un valioso patrimonio histórico, entre el que destaca la **Iglesia de Nuestra Señora de los Remedios**, construida en 1565 y ampliada en el siglo XVIII. En su interior se conserva "La Divina Pastora", una obra pictórica del siglo XVIII atribuida a Alonso Miguel de Tovar.
 
 Otro símbolo del pueblo es su **olmo centenario**, donde antiguamente se celebraban reuniones del Concejo. Además, el **Santuario de Nuestra Señora de la Coronada** es un lugar de gran valor arqueológico y devocional.
 
 ### Cortelazor en la actualidad
 
-Hoy en día, [**Cortelazor la Real**](https://www.vivecortelazor.es/es) mantiene su esencia tradicional y su belleza natural, atrayendo a visitantes que buscan tranquilidad y contacto con la naturaleza. Su ubicación privilegiada lo convierte en un destino ideal para el senderismo y el turismo rural. Su economía sigue basándose en la ganadería y el turismo, consolidándose como un tesoro escondido en la Sierra de Huelva.
+Hoy en día, [**Cortelazor la Real**](/es) mantiene su esencia tradicional y su belleza natural, atrayendo a visitantes que buscan tranquilidad y contacto con la naturaleza. Su ubicación privilegiada lo convierte en un destino ideal para el senderismo y el turismo rural. Su economía sigue basándose en la ganadería y el turismo, consolidándose como un tesoro escondido en la Sierra de Huelva.
 
-Con un legado histórico fascinante y un entorno inigualable, [**Cortelazor la Real**](https://www.vivecortelazor.es/es) sigue siendo un destino imprescindible para quienes desean conocer la auténtica vida en la Sierra de Aracena.</value>
+Con un legado histórico fascinante y un entorno inigualable, [**Cortelazor la Real**](/es) sigue siendo un destino imprescindible para quienes desean conocer la auténtica vida en la Sierra de Aracena.</value>
   </data>
   <data name="Keywords" xml:space="preserve">
     <value>Cortelazor la Real, historia de Cortelazor, Sierra de Aracena, patrimonio, tradiciones, cultura, Huelva, pueblos de Andalucía</value>
