--- a/src/ViveCortelazor/Resources/Views/Home/Index.es.resx
+++ b/src/ViveCortelazor/Resources/Views/Home/Index.es.resx
@@ -121,15 +121,15 @@
     <value>Bienvenido a Vive Cortelazor, donde podrás encontrar información del encantador pueblo de Cortelazor la Real, en pleno corazón de la Sierra de Aracena. Disfruta de su naturaleza, historia y gastronomía únicas.</value>
   </data>
   <data name="Introduction1" xml:space="preserve">
-    <value>Bienvenido a [**Vive Cortelazor**](https://www.vivecortelazor.es/es), el lugar donde encontrarás toda la información sobre [**Cortelazor la Real**](https://www.vivecortelazor.es/es), un pintoresco pueblo de la **Sierra de Aracena y Picos de Aroche**, en pleno Parque Natural. Rodeado de frondosos bosques de encinas y alcornoques, este destino es ideal para quienes buscan tranquilidad, naturaleza y tradición.</value>
+    <value>Bienvenido a [**Vive Cortelazor**](/es), el lugar donde encontrarás toda la información sobre [**Cortelazor la Real**](/es), un pintoresco pueblo de la **Sierra de Aracena y Picos de Aroche**, en pleno Parque Natural. Rodeado de frondosos bosques de encinas y alcornoques, este destino es ideal para quienes buscan tranquilidad, naturaleza y tradición.</value>
   </data>
   <data name="Introduction2" xml:space="preserve">
-    <value>Paseando por sus calles empedradas, descubrirás la esencia de la arquitectura serrana, con casas blancas que contrastan con el verde de los campos que la rodean. La riqueza patrimonial de [**Cortelazor**](https://www.vivecortelazor.es/es) se refleja en su **iglesia del siglo XVIII**, en sus antiguas fuentes y lavaderos, y en las numerosas **rutas de senderismo** que conectan el pueblo con otros rincones de la sierra.</value>
+    <value>Paseando por sus calles empedradas, descubrirás la esencia de la arquitectura serrana, con casas blancas que contrastan con el verde de los campos que la rodean. La riqueza patrimonial de [**Cortelazor**](/es) se refleja en su **iglesia del siglo XVIII**, en sus antiguas fuentes y lavaderos, y en las numerosas **rutas de senderismo** que conectan el pueblo con otros rincones de la sierra.</value>
   </data>
   <data name="Introduction3" xml:space="preserve">
-    <value>Además de su belleza natural, [**Cortelazor**](https://www.vivecortelazor.es/es) es un lugar donde la **gastronomía tradicional** juega un papel fundamental. Los productos derivados del **cerdo ibérico, la miel, los quesos artesanales y los guisos serranos** son solo algunas de las delicias que podrás disfrutar en sus mesones y bares.
+    <value>Además de su belleza natural, [**Cortelazor**](/es) es un lugar donde la **gastronomía tradicional** juega un papel fundamental. Los productos derivados del **cerdo ibérico, la miel, los quesos artesanales y los guisos serranos** son solo algunas de las delicias que podrás disfrutar en sus mesones y bares.
 
-Si buscas una experiencia auténtica en contacto con la naturaleza, la [**historia**](https://www.vivecortelazor.es/es/historia) y la cultura de la **Sierra de Aracena**, [**Vive Cortelazor**](https://www.vivecortelazor.es/es) es tu guía perfecta para descubrir todo lo que este maravilloso pueblo tiene para ofrecer.</value>
+Si buscas una experiencia auténtica en contacto con la naturaleza, la [**historia**](/es/historia) y la cultura de la **Sierra de Aracena**, [**Vive Cortelazor**](/es) es tu guía perfecta para descubrir todo lo que este maravilloso pueblo tiene para ofrecer.</value>
   </data>
   <data name="Keywords" xml:space="preserve">
     <value>Cortelazor la Real, Sierra de Aracena, Viajar a Cortelazor, Pueblos de la Sierra de Aracena, Turismo rural en Cortelazor, Naturaleza en Cortelazor, Senderismo en la Sierra de Aracena, Gastronomía de Cortelazor, Patrimonio histórico de Cortelazor, Qué ver en Cortelazor, Alojamiento en Cortelazor, Cultura de la Sierra de Aracena, Actividades al aire libre en Cortelazor, Rutas de senderismo en la Sierra de Aracena, Rutas de senderismo en Cortelazor, pueblos de Huelva, Andalucía, pueblos de Andalucía</value>
