Change design and absolute urls to relative urls #77

--- a/src/ViveCortelazor/Resources/Views/Home/Cookies.en.resx
+++ b/src/ViveCortelazor/Resources/Views/Home/Cookies.en.resx
@@ -128,7 +128,7 @@ Last updated: February 13, 2025
 Cookies are small text files that are stored on your device when you visit a website. They are used to improve the user experience, analyze site traffic, and remember preferences.
 
 ## 2. What types of cookies do we use?
-At [**vivecortelazor.es**](https://www.vivecortelazor.es), we only use **analytics cookies**, specifically those from **Google Analytics**. These cookies help us understand how visitors interact with our website, collecting information anonymously.
+At [**vivecortelazor.es**](/en), we only use **analytics cookies**, specifically those from **Google Analytics**. These cookies help us understand how visitors interact with our website, collecting information anonymously.
 
 ### **Google Analytics Cookies**
 These cookies allow us to collect data such as the number of visitors, most viewed pages, and time spent on the site. The information collected is completely anonymous and does not allow us to personally identify users.
