--- a/src/ViveCortelazor/Resources/Views/Home/Privacy.en.resx
+++ b/src/ViveCortelazor/Resources/Views/Home/Privacy.en.resx
@@ -126,7 +126,7 @@
 Last updated: February 13, 2025
 
 ## 1. Introduction
-At [**vivecortelazor.es**](https://www.vivecortelazor.es), we take our users' privacy very seriously. This Privacy Policy explains how we collect, use, and protect your personal data when you visit our website.
+At [**vivecortelazor.es**](/en), we take our users' privacy very seriously. This Privacy Policy explains how we collect, use, and protect your personal data when you visit our website.
 
 ## 2. Data Controller
 - **Controller's Name:** Evaristo Cuesta Guzmán
@@ -135,7 +135,7 @@ At [**vivecortelazor.es**](https://www.vivecortelazor.es), we take our users' pr
 ## 3. Data We Collect
 Our website may collect the following personal data:
 - Data voluntarily provided through the contact email.
-- Browsing data collected via analytics cookies (see our [Cookies Policy](https://www.vivecortelazor.es/en/cookies)).
+- Browsing data collected via analytics cookies (see our [Cookies Policy](/en/cookies)).
 
 ## 4. Purpose of Data Processing
 The collected data is used to:
