--- a/src/ViveCortelazor/Resources/Views/Home/Privacy.es.resx
+++ b/src/ViveCortelazor/Resources/Views/Home/Privacy.es.resx
@@ -126,7 +126,7 @@
 Última actualización: 13 de febrero de 2025
 
 ## 1. Introducción
-En [**vivecortelazor.es**](https://www.vivecortelazor.es), nos tomamos muy en serio la privacidad de nuestros usuarios. Esta Política de Privacidad explica cómo recopilamos, utilizamos y protegemos sus datos personales cuando visita nuestro sitio web.
+En [**vivecortelazor.es**](/es), nos tomamos muy en serio la privacidad de nuestros usuarios. Esta Política de Privacidad explica cómo recopilamos, utilizamos y protegemos sus datos personales cuando visita nuestro sitio web.
 
 ## 2. Responsable del Tratamiento
 - **Nombre del responsable:** Evaristo Cuesta Guzmán
@@ -135,7 +135,7 @@ En [**vivecortelazor.es**](https://www.vivecortelazor.es), nos tomamos muy en se
 ## 3. Datos que Recopilamos
 Nuestro sitio web puede recopilar los siguientes datos personales:
 - Datos proporcionados voluntariamente a través del correo electrónico de contacto.
-- Datos de navegación recopilados mediante cookies de análisis (consulte nuestra [Política de Cookies](https://www.vivecortelazor.es/es/cookies)).
+- Datos de navegación recopilados mediante cookies de análisis (consulte nuestra [Política de Cookies](/es/cookies)).
 
 ## 4. Finalidad del Tratamiento
 Los datos recopilados se utilizan para:
