--- a/src/ViveCortelazor/Resources/Views/Shared/_CookiesBanner.en.resx
+++ b/src/ViveCortelazor/Resources/Views/Shared/_CookiesBanner.en.resx
@@ -121,7 +121,7 @@
     <value>Accept All</value>
   </data>
   <data name="Cookies Text" xml:space="preserve">
-    <value>At [**vivecortelazor.es**](https://www.vivecortelazor.es/en), we use cookies to analyze traffic and improve your experience on our website. You can accept all cookies, reject them, or customize your preferences. For more information, please check our [**Cookies Policy**](https://www.vivecortelazor.es/en/cookies) and our [**Privacy Policy**](https://www.vivecortelazor.es/en/privacy).</value>
+    <value>At [**vivecortelazor.es**](/en), we use cookies to analyze traffic and improve your experience on our website. You can accept all cookies, reject them, or customize your preferences. For more information, please check our [**Cookies Policy**](/en/cookies) and our [**Privacy Policy**](/en/privacy).</value>
   </data>
   <data name="Marketing" xml:space="preserve">
     <value>Marketing</value>
