--- a/src/ViveCortelazor/Resources/Views/Shared/_CookiesBanner.es.resx
+++ b/src/ViveCortelazor/Resources/Views/Shared/_CookiesBanner.es.resx
@@ -124,7 +124,7 @@
     <value>Configuración de Cookies</value>
   </data>
   <data name="Cookies Text" xml:space="preserve">
-    <value>En [**vivecortelazor.es**](https://www.vivecortelazor.es/es), utilizamos cookies para analizar el tráfico y mejorar tu experiencia en nuestro sitio web. Puedes aceptar todas las cookies, rechazarlas o configurar tus preferencias. Para más información, consulta nuestra [**Política de Cookies**](https://www.vivecortelazor.es/es/cookies) y nuestra [**Política de Privacidad**](https://www.vivecortelazor.es/es/privacidad).</value>
+    <value>En [**vivecortelazor.es**](/es), utilizamos cookies para analizar el tráfico y mejorar tu experiencia en nuestro sitio web. Puedes aceptar todas las cookies, rechazarlas o configurar tus preferencias. Para más información, consulta nuestra [**Política de Cookies**](/es/cookies) y nuestra [**Política de Privacidad**](/es/privacidad).</value>
   </data>
   <data name="Marketing" xml:space="preserve">
     <value>Marketing</value>
