--- a/src/ViveCortelazor/Resources/Views/Home/WhatToDo.en.resx
+++ b/src/ViveCortelazor/Resources/Views/Home/WhatToDo.en.resx
@@ -117,16 +117,11 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="History" xml:space="preserve">
-    <value>History</value>
-  </data>
-  <data name="Home" xml:space="preserve">
-    <value>Home</value>
-  </data>
-  <data name="Privacy" xml:space="preserve">
-    <value>Privacy</value>
-  </data>
   <data name="What to do" xml:space="preserve">
     <value>What to do</value>
+  </data>
+  <data name="What to do text" xml:space="preserve">
+    <value># What to do in Cortelazor
+---</value>
   </data>
 </root>
