--- a/src/ViveCortelazor/Resources/Views/Shared/_Layout.es.resx
+++ b/src/ViveCortelazor/Resources/Views/Shared/_Layout.es.resx
@@ -126,4 +126,7 @@
   <data name="Privacy" xml:space="preserve">
     <value>Privacidad</value>
   </data>
+  <data name="What to do" xml:space="preserve">
+    <value>Qué hacer</value>
+  </data>
 </root>
