--- a/src/ViveCortelazor/Resources/Views/Shared/_LayoutIndex.en.resx
+++ b/src/ViveCortelazor/Resources/Views/Shared/_LayoutIndex.en.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Cortelazor and Sierra de Aracena" xml:space="preserve">
+    <value>Cortelazor and Sierra de Aracena</value>
+  </data>
+  <data name="Developed by" xml:space="preserve">
+    <value>Developed by</value>
+  </data>
   <data name="History" xml:space="preserve">
     <value>History</value>
   </data>
