Add what to do page #81

--- a/src/ViveCortelazor/Resources/Views/Home/WhatToDo.es.resx
+++ b/src/ViveCortelazor/Resources/Views/Home/WhatToDo.es.resx
@@ -121,7 +121,72 @@
     <value>Qué hacer</value>
   </data>
   <data name="What to do text" xml:space="preserve">
-    <value># Qué hacer en Cortelazor
----</value>
+    <value># Qué hacer en Cortelazor la Real
+---
+
+![Cortelazor la Real](/images/what-to-do/cortelazor.jpg)
+
+[**Cortelazor la Real**](/es) es un destino perfecto para los amantes de la naturaleza, la [**historia**](/es/historia) y la gastronomía. Su entorno privilegiado y su riqueza cultural ofrecen multitud de actividades para disfrutar de una escapada inolvidable. A continuación, te presentamos una guía sobre qué hacer en este encantador rincón de la **Sierra de Aracena**.
+
+## Sitios para ver
+
+[**Cortelazor la Real**](/es) cuenta con una gran variedad de lugares llenos de [**historia**](/es/historia) y belleza que no puedes dejar de visitar:
+
+- **Iglesia de Nuestra Señora de los Remedios**: Construida en el siglo XVI, es un testimonio del pasado religioso del pueblo. Alberga importantes pinturas murales y el cuadro de la Divina Pastora de Alonso Miguel de Tovar de 1748, una joya del arte barroco andaluz.
+- **Ermita de la Virgen de la Coronada**: Ubicada a 4 km del pueblo, esta ermita del siglo XIII alberga una talla de la Virgen de la Coronada, una de las imágenes más veneradas por los lugareños.
+- **Olmo Viejo**: Un árbol con más de 900 años de historia que ha sido testigo de los concejos municipales de la villa y celebraciones populares. Hoy en día sigue siendo un punto de encuentro para los vecinos.
+- **Fuente del Zorro y Lavaderos**: Lugares emblemáticos que nos trasladan a tiempos en los que las mujeres del pueblo acudían a lavar la ropa y a recoger agua.
+- [**Asociación La Mano Verde**](https://www.facebook.com/profile.php?id=100089104958892): Espacio cultural donde se organizan eventos como conciertos, presentaciones literarias, mercados ecológicos y talleres de diversas disciplinas.
+
+![Cortelazor la Real](/images/what-to-do/iglesia-nuestra-senora-remedios.jpg)
+
+## Senderismo
+
+[**Cortelazor**](/es) es un punto de partida ideal para los amantes del senderismo. Sus senderos serpentean a través de dehesas, bosques y paisajes montañosos, ofreciendo una experiencia única para quienes buscan conectar con la naturaleza. Entre sus rutas destaca la **Ruta del Charco Malo**, sendero que te llevará hasta una espectacular **poza natural**. Durante el recorrido, podrás disfrutar de un hermoso paisaje rodeado de vegetación autóctona.
+
+![Cortelazor la Real](/images/what-to-do/charco-malo.jpg)
+
+## Festividades
+
+El calendario festivo de [**Cortelazor la Real**](/es) está lleno de eventos tradicionales y celebraciones que reflejan la identidad del pueblo. A continuación, un repaso por meses:
+
+### Enero
+- **Cabalgata de Reyes Magos (5 de enero)**: Carrozas tiradas por tractores recorren el pueblo repartiendo regalos donde niños y mayores podrán disfrutar.
+
+### Febrero
+- **Carnavales**: Se celebra con un animado pasacalles y concursos de disfraces. Una de las tradiciones más curiosas es el **entierro del jamón**.
+- **Día de Andalucía (28 de febrero)**: Se lleva a cabo una **matanza tradicional** en la plaza del pueblo, con degustaciones y actividades relacionadas con la **gastronomía local**.
+
+### Marzo - Abril
+- **Pascua de Semana Santa**: En esta localidad se celebra el Jueves Santo con una procesión de la Virgen de los Dolores y el Señor Crucificado, el Viernes Santo con un Viacrucis, Sábado Santo con una procesión del Señor Resucitado, como tradición aquí se pone en casa de un mayordomo, y seguidamente se quema el Judas. El Domingo de Resurrección tiene lugar una procesión muy temprano por la mañana, con la Virgen de los Remedios y el Señor Resucitado.
+- **Festival Cortelafolk**: Desde 2024, este festival ofrece actuaciones de artistas internacionales y un mercadillo de comida y artesanía.
+
+### Mayo
+- **Cruces de Mayo**: Se adornan las calles con altares decorados con flores y se bendicen hornazos, panecillos y dulces típicos.
+- **Romería de la Virgen de la Coronada (segundo domingo de mayo)**: Una procesión en honor a la patrona del pueblo, acompañada de convivencia y festividades populares.
+
+### Junio
+- **Fiestas en honor a San Juan (24 de junio)**: Se corta un chopo en el campo y se transporta hasta el pueblo, donde se levanta en la torre de la iglesia como símbolo festivo.
+
+### Julio
+- **Semana Cultural**: Se celebra en la tercera semana de julio, una semana llena de actividades culturales y deportivas para todos los sectores de la población, incluyendo conciertos, manualidades, ponencias, entre otras actividades.
+
+### Agosto
+- **Certamen Nacional de Pintura al Aire Libre (primer sábado de agosto)**: Artistas de toda Andalucía llenan las calles con sus caballetes, pintando los rincones más bellos del pueblo.
+- **Fiestas Patronales en honor a la Virgen de los Remedios (13-15 de agosto)**: Se celebran con música en la plaza y el esperado "toro de fuego".
+
+## Gastronomía
+
+La gastronomía de [**Cortelazor la Real**](/es) es un fiel reflejo de su entorno natural y tradiciones culinarias. Aquí podrás degustar platos elaborados con productos autóctonos de gran calidad:
+
+- **Carnes de caza**: El venado y el jabalí son protagonistas de guisos y asados con recetas tradicionales de la sierra.
+- **Queso de cabra y chacinas**: Elaborados artesanalmente, son un deleite para los amantes de los sabores intensos.
+- **Castañas**: Ingrediente esencial en muchas preparaciones, desde guisos hasta postres típicos.
+- **Setas de temporada**: En otoño, las setas se convierten en un manjar apreciado, utilizado en revueltos, guisos y sopas.
+- **Bares y restaurantes locales**: Espacios acogedores donde degustar la gastronomía tradicional en un ambiente familiar.
+
+## Disfruta de Cortelazor
+
+Ya sea recorriendo sus senderos, explorando sus monumentos, participando en sus festividades o deleitándote con su gastronomía, [**Cortelazor la Real**](/es) ofrece una experiencia única. Sumérgete en la magia de este encantador pueblo y descubre todo lo que tiene para ofrecer.</value>
   </data>
 </root>
