--- a/src/ViveCortelazor/Resources/Views/Home/WhatToDo.en.resx
+++ b/src/ViveCortelazor/Resources/Views/Home/WhatToDo.en.resx
@@ -117,11 +117,17 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Description" xml:space="preserve">
+    <value>Discover what to do in Cortelazor la Real - explore historic sites like the 16th century church, hike scenic trails to Charco Malo, enjoy traditional festivities year-round, and savor local gastronomy featuring game meats and artisanal cheeses in this charming Sierra de Aracena village.</value>
+  </data>
+  <data name="Keywords" xml:space="preserve">
+    <value>Cortelazor la Real, Sierra de Aracena, Church of Nuestra Señora de los Remedios, hiking trails, Charco Malo, traditional festivities, Spanish village tourism, Andalusian gastronomy, Virgen de la Coronada, rural Spain getaway</value>
+  </data>
   <data name="What to do" xml:space="preserve">
     <value>What to do</value>
   </data>
   <data name="What to do text" xml:space="preserve">
-    <value># What to Do in Cortelazor la Real
+    <value># What to Do in Cortelazor
 ---
 
 ![Cortelazor la Real](/images/what-to-do/cortelazor.jpg)
