Change remove cookies links in English version #83

--- a/src/ViveCortelazor/Resources/Views/Home/Cookies.en.resx
+++ b/src/ViveCortelazor/Resources/Views/Home/Cookies.en.resx
@@ -142,10 +142,10 @@ _gat | Google Analytics | Limit request rate | 1 minute
 ## 3. How to manage cookies?
 You can accept or reject analytics cookies in the cookie banner when you access our website. You can also configure your browser to block or delete cookies at any time. Below, we provide links to cookie management in the main browsers:
 
-- [Google Chrome](https://support.google.com/chrome/answer/95647?hl=es)
-- [Mozilla Firefox](https://support.mozilla.org/es/kb/Borrar%20cookies)
-- [Microsoft Edge](https://support.microsoft.com/es-es/help/4027947/microsoft-edge-delete-cookies)
-- [Safari](https://support.apple.com/es-es/HT201265)
+- [Google Chrome](https://support.google.com/chrome/answer/95647?hl=en)
+- [Mozilla Firefox](https://support.mozilla.org/en-US/kb/clear-cookies-and-site-data-firefox)
+- [Microsoft Edge](https://support.microsoft.com/en-gb/help/4027947/microsoft-edge-delete-cookies)
+- [Safari](https://support.apple.com/en-gb/105082)
 
 ## 4. Changes to the Cookies Policy
 We may update this policy at any time to reflect changes in legislation or in our use of cookies. We recommend that you review it periodically.
